add some new stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-welcome.message: Mkyong
-
 spring.thymeleaf.cache=false
+dbURL=jdbc:mysql://3.88.210.26:3306/restaurantmanager?useSSL=false&allowPublicKeyRetrieval=true
+#dbURL=jdbc:mysql://localhost:3306/restaurant?useSSL=false&allowPublicKeyRetrieval=true
+username= restaurant
+password = 1qazXSW@3edc
+AESKey = "!xshh3!g29hl7xdp9o"
