--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 			<artifactId>json</artifactId>
 			<version>20190722</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<!--<version>5.1.39</version>-->
+			<version>8.0.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
